Add linting tests
- Add ".ansible-lint" config with exception rules
- Add lint flow to github actions
- Modify roles to meet linting rules

--- a/docs/playbooks_examples/acm_import_cluster.yml
+++ b/docs/playbooks_examples/acm_import_cluster.yml
@@ -2,7 +2,5 @@
 - name: Import OCP clusters to ACM
   hosts: localhost
   gather_facts: false
-  collections:
-    - stolostron.rhacm
   roles:
-    - acm_import_cluster
+    - stolostron.rhacm.acm_import_cluster
