--- a/roles/acm/tasks/update_pull_secret.yml
+++ b/roles/acm/tasks/update_pull_secret.yml
@@ -3,7 +3,7 @@
   kubernetes.core.k8s_info:
     host: "{{ cluster_api }}"
     api_key: "{{ cluster_api_token }}"
-    validate_certs: no
+    validate_certs: false
     api_version: v1
     kind: Secret
     name: pull-secret
@@ -59,7 +59,7 @@
   kubernetes.core.k8s:
     host: "{{ cluster_api }}"
     api_key: "{{ cluster_api_token }}"
-    validate_certs: no
+    validate_certs: false
     state: present
     merge_type:
       - merge
