--- a/roles/acm_hive_cluster/tasks/prepare_secrets.yml
+++ b/roles/acm_hive_cluster/tasks/prepare_secrets.yml
@@ -3,7 +3,7 @@
   community.okd.k8s:
     host: "{{ cluster_api }}"
     api_key: "{{ cluster_api_token }}"
-    validate_certs: no
+    validate_certs: false
     definition: "{{ lookup('template', 'cloud-secret.yaml.j2') | from_yaml }}"
   loop: "{{ acm_hive_clusters }}"
   no_log: true
@@ -12,7 +12,7 @@
   community.okd.k8s:
     host: "{{ cluster_api }}"
     api_key: "{{ cluster_api_token }}"
-    validate_certs: no
+    validate_certs: false
     definition: "{{ lookup('template', 'pull-secret.yaml.j2') | from_yaml }}"
   loop: "{{ acm_hive_clusters }}"
   no_log: true
@@ -21,7 +21,7 @@
   community.okd.k8s:
     host: "{{ cluster_api }}"
     api_key: "{{ cluster_api_token }}"
-    validate_certs: no
+    validate_certs: false
     definition: "{{ lookup('template', 'private-key-secret.yaml.j2') | from_yaml }}"
   loop: "{{ acm_hive_clusters }}"
   no_log: true
@@ -30,7 +30,7 @@
   community.okd.k8s:
     host: "{{ cluster_api }}"
     api_key: "{{ cluster_api_token }}"
-    validate_certs: no
+    validate_certs: false
     definition: "{{ lookup('template', 'install-config-secret.yaml.j2') | from_yaml }}"
   loop: "{{ acm_hive_clusters }}"
 
@@ -38,7 +38,7 @@
   community.okd.k8s:
     host: "{{ cluster_api }}"
     api_key: "{{ cluster_api_token }}"
-    validate_certs: no
+    validate_certs: false
     definition: "{{ lookup('template', 'vsphere_cert.yaml.j2') | from_yaml }}"
   loop: "{{ acm_hive_clusters }}"
   when: item.platform == "vmw"
@@ -47,7 +47,7 @@
   community.okd.k8s:
     host: "{{ cluster_api }}"
     api_key: "{{ cluster_api_token }}"
-    validate_certs: no
+    validate_certs: false
     definition: "{{ lookup('template', 'openstack_trust_cert.yaml.j2') | from_yaml }}"
   loop: "{{ acm_hive_clusters }}"
   when: item.platform == "openstack"
