--- a/roles/acm_import_cluster/tasks/handle_import_secret.yml
+++ b/roles/acm_import_cluster/tasks/handle_import_secret.yml
@@ -3,7 +3,7 @@
   kubernetes.core.k8s_info:
     host: "{{ cluster_api }}"
     api_key: "{{ cluster_api_token }}"
-    validate_certs: no
+    validate_certs: false
     api_version: v1
     kind: Secret
     name: "{{ item.name }}-import"
@@ -25,7 +25,7 @@
   community.okd.k8s:
     kubeconfig: "{{ item.kubeconfig }}"
     definition: "{{ secret | b64decode }}"
-    validate_certs: no
+    validate_certs: false
     state: "present"
   loop:
     - "{{ crds_secret }}"
