--- a/docs/playbooks_examples/acm.yml
+++ b/docs/playbooks_examples/acm.yml
@@ -2,7 +2,5 @@
 - name: Advanced Cluster Mnagement Hub
   hosts: localhost
   gather_facts: false
-  collections:
-    - stolostron.rhacm
   roles:
-    - acm
+    - stolostron.rhacm.acm
