--- a/docs/playbooks_examples/env_deploy.yml
+++ b/docs/playbooks_examples/env_deploy.yml
@@ -3,9 +3,7 @@
   gather_facts: false
   vars:
     state: present
-  collections:
-    - stolostron.rhacm
   roles:
-    - ocp
-    - acm
-    - acm_hive_cluster
+    - stolostron.rhacm.ocp
+    - stolostron.rhacm.acm
+    - stolostron.rhacm.acm_hive_cluster
