--- a/roles/acm/tasks/deploy.yml
+++ b/roles/acm/tasks/deploy.yml
@@ -11,8 +11,8 @@
 
 - name: Select latest downstream snapshot according to provided version
   ansible.builtin.set_fact:
-    snapshot: "{{ snap.json.tags 
-      | selectattr('name', 'match', acm_version) 
+    snapshot: "{{ snap.json.tags
+      | selectattr('name', 'match', acm_version)
       | map(attribute='name') | first }}"
   when: snapshot is none
 
@@ -20,11 +20,11 @@
   ansible.builtin.debug:
     msg: "ACM version '{{ acm_version }}' with '{{ snapshot }}' snapshot will be deployed"
 
-- name: Create "{{ acm_namespace }}" namespace
+- name: Create namespace "{{ acm_namespace }}"
   community.okd.k8s:
     host: "{{ cluster_api }}"
     api_key: "{{ cluster_api_token }}"
-    validate_certs: no
+    validate_certs: false
     api_version: v1
     kind: Namespace
     name: "{{ acm_namespace }}"
@@ -38,7 +38,7 @@
   community.okd.k8s:
     host: "{{ cluster_api }}"
     api_key: "{{ cluster_api_token }}"
-    validate_certs: no
+    validate_certs: false
     definition: "{{ lookup('template', 'image-content-source-policy.yaml.j2') | from_yaml }}"
     state: present
 
@@ -46,7 +46,7 @@
   community.okd.k8s:
     host: "{{ cluster_api }}"
     api_key: "{{ cluster_api_token }}"
-    validate_certs: no
+    validate_certs: false
     definition: "{{ lookup('template', 'operator-group.yaml.j2') | from_yaml }}"
     state: present
 
@@ -54,7 +54,7 @@
   community.okd.k8s:
     host: "{{ cluster_api }}"
     api_key: "{{ cluster_api_token }}"
-    validate_certs: no
+    validate_certs: false
     definition: "{{ lookup('template', 'catalog-source.yaml.j2') | from_yaml }}"
     state: present
   loop: "{{ catalog_sources }}"
@@ -63,7 +63,7 @@
   kubernetes.core.k8s_info:
     host: "{{ cluster_api }}"
     api_key: "{{ cluster_api_token }}"
-    validate_certs: no
+    validate_certs: false
     api_version: operators.coreos.com/v1alpha1
     kind: CatalogSource
     name: "{{ item.catalog_name }}"
@@ -78,7 +78,7 @@
   community.okd.k8s:
     host: "{{ cluster_api }}"
     api_key: "{{ cluster_api_token }}"
-    validate_certs: no
+    validate_certs: false
     definition: "{{ lookup('template', 'subscription.yaml.j2') | from_yaml }}"
     state: present
 
@@ -86,7 +86,7 @@
   kubernetes.core.k8s_info:
     host: "{{ cluster_api }}"
     api_key: "{{ cluster_api_token }}"
-    validate_certs: no
+    validate_certs: false
     api_version: operators.coreos.com/v1alpha1
     kind: Subscription
     name: acm-operator-subscription
@@ -103,7 +103,7 @@
   kubernetes.core.k8s_info:
     host: "{{ cluster_api }}"
     api_key: "{{ cluster_api_token }}"
-    validate_certs: no
+    validate_certs: false
     api_version: operators.coreos.com/v1alpha1
     kind: ClusterServiceVersion
     name: "{{ acm_subscription.resources[0].status.currentCSV }}"
@@ -121,11 +121,11 @@
   community.okd.k8s:
     host: "{{ cluster_api }}"
     api_key: "{{ cluster_api_token }}"
-    validate_certs: no
+    validate_certs: false
     definition: "{{ lookup('template', 'multiclusterhub.yaml.j2') | from_yaml }}"
     state: present
-    wait: yes
+    wait: true
     wait_timeout: 1200
     wait_condition:
       type: Complete
-      status: True
+      status: true
