--- a/roles/acm_hive_cluster/tasks/cluster_deployment.yml
+++ b/roles/acm_hive_cluster/tasks/cluster_deployment.yml
@@ -21,10 +21,10 @@
     hive_cluster_image: "{{ ocp_image_base_url }}:{{ hive_cluster_ver }}"
   when: item.hive_cluster_image is not defined
 
-- name: "{{ info_state }} Cluster Deployment for {{ item.name }} cluster"
+- name: Cluster Deployment for cluster "{{ item.name }}"
   community.okd.k8s:
     host: "{{ cluster_api }}"
     api_key: "{{ cluster_api_token }}"
-    validate_certs: no
+    validate_certs: false
     definition: "{{ lookup('template', 'cluster-deployment.yaml.j2') | from_yaml }}"
     state: "{{ state }}"
