--- a/roles/cluster_login/tasks/main.yml
+++ b/roles/cluster_login/tasks/main.yml
@@ -8,14 +8,18 @@
     path: "{{ working_path }}/{{ clusters_details_file }}"
   register: cl_file_state
 
-- block:
+- name: Fetch and set cluster details
+  when:
+    - cl_file_state.stat.exists
+    - cl_file_state.stat.size != 0
+  block:
     - name: Fetch cluster details file data as dict
       ansible.builtin.set_fact:
         cl_file: "{{ lookup('file', '{{ working_path }}/{{ clusters_details_file }}') | from_yaml }}"
       no_log: true
 
     - name: Set the hub to use if defined or first available
-      ansible.builtin.set_fact:
+      ansible.builtin.set_fact: # noqa: jinja[spacing]
         cl_name: "{%- if cluster_login_name -%}
                   {{ cluster_login_name }}
                   {%- else -%}
@@ -28,9 +32,6 @@
         cl_user: "{{ cl_file[cl_name].user | default('kubeadmin') }}"
         cl_pass: "{{ cl_file[cl_name].pass }}"
       no_log: true
-  when:
-    - cl_file_state.stat.exists
-    - cl_file_state.stat.size != 0
 
 - name: Allocate cluster connection details
   ansible.builtin.set_fact:
@@ -39,16 +40,16 @@
     cluster_pass: "{{ lookup('env', 'OC_CLUSTER_PASS') | default(cl_pass, true) }}"
   no_log: true
 
-- name: Log in to "{{ cluster_api }}" (obtain access token)
+- name: Obtain access token from cluster "{{ cluster_api }}"
   community.okd.openshift_auth:
     host: "{{ cluster_api }}"
     username: "{{ cluster_user }}"
     password: "{{ cluster_pass }}"
-    validate_certs: no
+    validate_certs: false
   register: ocp_auth
   no_log: true
 
-- name: Set "{{ cluster_api }}" authentication token
+- name: Set authentication token for cluster "{{ cluster_api }}"
   ansible.builtin.set_fact:
     cluster_api_token: "{{ ocp_auth.openshift_auth.api_key }}"
   no_log: true
