--- a/roles/managed_openshift/tasks/clusters_dirs.yml
+++ b/roles/managed_openshift/tasks/clusters_dirs.yml
@@ -3,7 +3,7 @@
   ansible.builtin.file:
     path: "{{ working_path }}"
     state: directory
-    recurse: yes
+    recurse: true
   when: state == "present"
 
 - name: Managed OCP directory for each cluster - {{ state }}
@@ -13,12 +13,15 @@
                  {%- elif state == 'absent' -%}
                  absent
                  {%- endif -%}"
-  ansible.builtin.file:
+  ansible.builtin.file: # noqa: jinja[spacing]
     path: "{{ working_path }}/{{ item.name }}"
+    mode: '0755'
     state: "{{ state_step }}"
   loop: "{{ clusters_list }}"
 
-- block:
+- name: Cleanup clusters entries
+  when: state == "absent"
+  block:
     - name: Remove clusters details from the state file
       ansible.builtin.blockinfile:
         path: "{{ cl_details_file_path }}"
@@ -27,16 +30,15 @@
         state: absent
       loop: "{{ clusters_list }}"
 
-    - name: Check the "{{ clusters_details_file }}" file
+    - name: Check the file "{{ clusters_details_file }}"
       ansible.builtin.stat:
         path: "{{ cl_details_file_path }}"
       register: cl_file_state
 
-    - name: Delete the "{{ clusters_details_file }}" file if empty
+    - name: Delete the file if empty - "{{ clusters_details_file }}"
       ansible.builtin.file:
         path: "{{ cl_details_file_path }}"
         state: absent
       when:
         - cl_file_state.stat.exists
         - cl_file_state.stat.size == 0
-  when: state == "absent"
