--- a/roles/managed_openshift/tasks/rosa/check_cluster.yml
+++ b/roles/managed_openshift/tasks/rosa/check_cluster.yml
@@ -7,11 +7,13 @@
   ansible.builtin.command:
     cmd: "{{ rosa }} login --token {{ rosa_creds.rosa_token }}"
   no_log: true
+  changed_when: false
 
 - name: ROSA - Check if ROSA cluster exists
   ansible.builtin.command:
     cmd: "{{ rosa }} --profile rhacm-automation list clusters --region {{ item.region }} -o json"
   register: rosa_cluster_state
+  changed_when: false
 
 - name: ROSA - Set if cluster exists
   ansible.builtin.set_fact:
