--- a/roles/ocp/tasks/main.yml
+++ b/roles/ocp/tasks/main.yml
@@ -35,7 +35,9 @@
   ansible.builtin.include_tasks:
     file: process.yml
 
-- block:
+- name: Remove remains after cluster deletions
+  when: state == "absent"
+  block:
     - name: Delete assets directory when cluster destroyed
       ansible.builtin.file:
         path: "{{ working_path }}/{{ item.name }}/"
@@ -50,21 +52,22 @@
         state: absent
       loop: "{{ clusters_list }}"
 
-    - name: Check the "{{ clusters_details_file }}" file
+    - name: Check the file "{{ clusters_details_file }}"
       ansible.builtin.stat:
         path: "{{ cl_details_file_path }}"
       register: cl_file_state
 
-    - name: Delete the "{{ clusters_details_file }}" file if empty
+    - name: Delete the file if empty "{{ clusters_details_file }}"
       ansible.builtin.file:
         path: "{{ cl_details_file_path }}"
         state: absent
       when:
         - cl_file_state.stat.exists
         - cl_file_state.stat.size == 0
-  when: state == "absent"
 
-- block:
+- name: Gather and print created/existing clusters
+  when: state == "present"
+  block:
     - name: Combine newly created and existing clusters list
       ansible.builtin.set_fact:
         clusters_list: "{{ clusters_list | default([]) + existing_clusters | default([]) }}"
@@ -77,4 +80,3 @@
     - name: Print clusters details
       ansible.builtin.debug:
         msg: "{{ cl_state }}"
-  when: state == "present"
