--- a/roles/ocp/tasks/prepare_clusters_list.yml
+++ b/roles/ocp/tasks/prepare_clusters_list.yml
@@ -5,15 +5,15 @@
   loop: "{{ clusters }}"
   register: cluster_assets_dir
 
-# Init clusters_list var so in case no clusters found to be removed
+# Init ocp_clusters_list var so in case no clusters found to be removed
 # the flol just skip all tasks and not fail.
-- name: Init clusters_list var
+- name: Init ocp_clusters_list var
   ansible.builtin.set_fact:
-    clusters_list: []
+    ocp_clusters_list: []
 
-- name: Create clusters list for creation
+- name: Create ocp clusters list for creation
   ansible.builtin.set_fact:
-    clusters_list: "{{ clusters_list | default([]) + [item.item] }}"
+    ocp_clusters_list: "{{ ocp_clusters_list | default([]) + [item.item] }}"
   loop: "{{ cluster_assets_dir.results }}"
   when:
     - state == "present"
@@ -21,7 +21,7 @@
 
 - name: Create list of already existing clusters
   ansible.builtin.set_fact:
-    existing_clusters: "{{ existing_clusters | default([]) + [item.item] }}"
+    existing_ocp_clusters: "{{ existing_ocp_clusters | default([]) + [item.item] }}"
   loop: "{{ cluster_assets_dir.results }}"
   when:
     - state == "present"
@@ -29,7 +29,7 @@
 
 - name: Create clusters list for deletion
   ansible.builtin.set_fact:
-    clusters_list: "{{ clusters_list | default([]) + [item.item] }}"
+    ocp_clusters_list: "{{ ocp_clusters_list | default([]) + [item.item] }}"
   loop: "{{ cluster_assets_dir.results }}"
   when:
     - state == "absent"
