--- a/roles/ocp/tasks/process.yml
+++ b/roles/ocp/tasks/process.yml
@@ -20,7 +20,7 @@
     cmd: "/tmp/openshift-install-{{ ocp_version_run }} {{ cluster_state }} cluster --dir {{ working_path }}/{{ item.name }}/"
   async: 3600
   poll: 0
-  loop: "{{ clusters_list }}"
+  loop: "{{ ocp_clusters_list }}"
   register: async_results
   changed_when: true
 
