--- a/docs/config-sample.yml
+++ b/docs/config-sample.yml
@@ -110,9 +110,8 @@ clusters_credentials:
 # ACM role
 ###########
 
-# Choose one of the 2 following parameters:
 acm_version: "2.8"  # When specifying an acm version, the last available will be fetched from "quay.io:443/acm-d"
-# snapshot: In case specific snapshot should be deployed, use this variable instead of "acm_version".
+# snapshot: Optional. In case specific snapshot of acm version should be deployed.
 
 # Optional parameter.
 # Define when multiple "ocp" or "managed_openshift" cluster deployed.
