--- a/docs/config-sample.yml
+++ b/docs/config-sample.yml
@@ -297,7 +297,7 @@ managed_openshift_clusters:
         type: Standard_D4s_v3
         disk_size: 128
         count: 3
-    cluster_version: "4.11.26"
+    openshift_version: "4.11.26"
 
   # ROSA cluster
   - name: cluster-rosa
