[MANAGED_OPENSHIFT] - Add ROKS platform support
Add ROKS (Openshift on IBM cloud) platform support to managed_openshift
role.

--- a/docs/config-sample.yml
+++ b/docs/config-sample.yml
@@ -315,6 +315,17 @@ managed_openshift_clusters:
     openshift_version: "4.13.6"  # Optional. If not specified, will use the latest.
     skip_tls_verify: true  # Optional. Set the flag in the kubeconfig file.
 
+  # ROKS cluster
+  - name: cluster-roks
+    platform: roks
+    credentials: roks-creds
+    region: us-east
+    machines:
+      worker:
+        type: bx2.4x16
+        count: 3
+    openshift_version: "4.14"
+
 managed_openshift_clusters_credentials:
   # ARO credentials
   - name: aro-creds
@@ -329,6 +340,10 @@ managed_openshift_clusters_credentials:
     aws_access_key_id: <your_key>
     aws_secret_access_key: <your_secret_key>
     rosa_token: <your_rosa_token>
+
+  # ROKS credentials
+  - name: roks-creds
+    roks_token: <your_roks_api_token>
 
 ##########################
 # ACM IMPORT CLUSTER role
