--- a/galaxy.yml
+++ b/galaxy.yml
@@ -27,3 +27,4 @@ dependencies:
   kubernetes.core: '==2.4.0'
   community.okd: '==2.3.0'
   azure.azcollection: '==1.16.0'
+  goldyfruit.ibmcloud_automation: '==1.0.4'
