--- a/roles/managed_openshift/vars/main.yml
+++ b/roles/managed_openshift/vars/main.yml
@@ -4,3 +4,4 @@ clusters_dir: managed_openshift
 clusters_details_file: clusters_details.yml
 
 rosa_binary: https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/rosa/latest/rosa-linux.tar.gz
+roks_binary_url: https://download.clis.cloud.ibm.com/ibm-cloud-cli
