--- a/roles/acm/defaults/main.yml
+++ b/roles/acm/defaults/main.yml
@@ -14,6 +14,32 @@ snapshot:
 
 acm_namespace: open-cluster-management
 
+acm_components:
+  - name: app-lifecycle
+    enabled: true
+  - name: cluster-lifecycle
+    enabled: true
+  - name: cluster-permission
+    enabled: true
+  - name: console
+    enabled: true
+  - name: grc
+    enabled: true
+  - name: insights
+    enabled: true
+  - name: multicluster-engine
+    enabled: true
+  - name: multicluster-observability
+    enabled: true
+  - name: search
+    enabled: false
+  - name: submariner-addon
+    enabled: true
+  - name: volsync
+    enabled: true
+  - name: cluster-backup
+    enabled: true
+
 # If it's "false", ACM will be deployed from official RH registry
 # If it's "true", ACM will be deployed from downstream testing registry
 deploy_test_env: false
