[MANAGED_OPENSHIFT] - Modify ARO cluster version deploy
Modify ARO cluster version selection for deployment.
With the change, the user should be able to define the requested version
to be deployed instead of searching for specific version and defining
it prior the deployment.

In the new flow, the requested version defined by the user, for example
- 4.15, will be automatically searched across available versions and the
last availabe version will be selected for ROSA cluster deployment.

A new azure collection module has been added to fetch available versions
of openshift cluster to deploy.
A PR has been submitted to azure collection:
https://github.com/ansible-collections/azure/pull/1602

--- a/roles/managed_openshift/tasks/aro/process.yml
+++ b/roles/managed_openshift/tasks/aro/process.yml
@@ -50,6 +50,10 @@
   ansible.builtin.include_tasks:
     file: rbac.yml
 
+- name: ARO - Identify deployment version
+  ansible.builtin.include_tasks:
+    file: fetch_version.yml
+
 - name: ARO - Create cluster
   azure.azcollection.azure_rm_openshiftmanagedcluster:
     profile: rhacm-automation
@@ -59,7 +63,7 @@
     cluster_profile:
       domain: "{{ item.name }}.{{ item.base_domain }}"
       pull_secret: "{{ pull_secret | string }}"
-      version: "{{ item.openshift_version | default(omit) }}"
+      version: "{{ ocp_version }}"
     service_principal_profile:
       client_id: "{{ app_id }}"
       client_secret: "{{ subscription.client_secret }}"
