--- a/roles/managed_openshift/tasks/rosa/process.yml
+++ b/roles/managed_openshift/tasks/rosa/process.yml
@@ -64,3 +64,7 @@
       {% endif %}
       --yes
   changed_when: true
+  register: rosa_cl_create
+  until: rosa_cl_create.rc == 0
+  retries: 2
+  delay: 10
