--- a/roles/acm/tasks/test_env_config.yml
+++ b/roles/acm/tasks/test_env_config.yml
@@ -53,6 +53,10 @@
     namespace: "{{ item.catalog_ns }}"
   loop: "{{ catalog_sources }}"
   register: acm_catalog
-  until: acm_catalog.resources[0].status.connectionState.lastObservedState == "READY"
+  until:
+    - "'status' in acm_catalog.resources[0]"
+    - "'connectionState' in acm_catalog.resources[0].status"
+    - "'lastObservedState' in acm_catalog.resources[0].status.connectionState"
+    - acm_catalog.resources[0].status.connectionState.lastObservedState == "READY"
   retries: 15
   delay: 10
